<resources>
    <string name="app_name">MovieTrailer</string>
    <string name="login_button">Login</string>
    <string name="success_prompt">Success</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="con_password">Confirm Password</string>
    <string name="new_account">No Account yet? Create One</string>
    <string name="create_button">Create</string>
    <string name="watch_button">Watch</string>
    <string name="genre_string">Genre</string>
    <string name="go_button">Go</string>
    <string name="save">Save To Gallery</string>
    <string name="actor_number"># Of Actors</string>
    <string name="processing">Processing...</string>
    <string name="facebook_app_id">1209265295786931</string>
    <string name="delete_account_button">Delete Account</string>
    <string name="logout_button">Logout</string>
    <string name="btnCapture">Capture</string>
    <string name="shareButton">Share</string>
    <string name= "profile">Profile</string>
    <string name= "settings">Settings</string>

    <string-array name="genre_array">
        <item>Action</item>
        <item>Rom-Com</item>
    </string-array>

    <string-array name="actor_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
