<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity = "center"
    android:orientation = "vertical"
    android:background="#ffffff"
    android:weightSum="1"
    android:baselineAligned="false">


    <ImageView
        android:id= "@+id/clapper_icon"
        android:layout_width="154dp"
        android:layout_height="117dp"
        android:padding="20dp"
        android:src="@mipmap/clapper_logo"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.11"
        android:layout_marginTop="-20dp" />
    <EditText
        android:id="@+id/new_username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:gravity="left"
        android:hint="@string/username"
        android:singleLine="true">

    <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/new_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:gravity="left"
        android:hint="@string/password"
        android:singleLine="true"
        android:layout_marginBottom="5dp"
        android:inputType="textPassword">

    </EditText>

    <EditText
        android:id="@+id/confirm_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:hint="@string/con_password"
        android:singleLine="true"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center_horizontal"
        android:inputType="textPassword">

    </EditText>


    <Button
        android:id="@+id/create_acc_button"
        android:layout_width = "wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text = "@string/create_button"
        android:background="#f36230"
        android:layout_gravity="center_horizontal" />

</LinearLayout>