<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity = "center"
    android:orientation = "vertical"
    android:background="#ffffff"
    android:weightSum="1">

    <ImageView
        android:id= "@+id/clapper_icon"
        android:layout_width="154dp"
        android:layout_height="117dp"
        android:padding="20dp"
        android:src="@mipmap/clapper_logo"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.11" />
    <EditText
        android:id="@+id/username_text"
        android:textCursorDrawable="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:gravity="left"
        android:hint="@string/username"
        android:singleLine="true" />
    <EditText
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:gravity="left"
        android:hint="@string/password"
        android:singleLine="true"
        android:layout_marginBottom="15dp"
        android:inputType="textPassword"
        android:password="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width = "wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text = "@string/login_button"
        android:background="#f36230"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/new_account_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:gravity="left"
        android:text="@string/new_account"
        />
</LinearLayout>
